# atomica

./: .gitignore  .travis.yml  CHANGELOG.md  DOCKERREADME.md  Dockerfile  LICENSE  MANIFEST.in  README.md  api.md  azure-pipelines.yml  cloudbuild-cascade-celery-only.yml  cloudbuild-cascade-deploy.yml  cloudbuild-cascade-localredis.yml  cloudbuild-cascade.yml  cloudbuild-tb-deploy.yml  cloudbuild-tb-localredis.yml  cloudbuild-tb.yml  cloudbuild.yaml  docker-compose-cascade-celery-only.yml  docker-compose-cascade-load-balanced.yml  docker-compose-cascade-local.yml  docker-compose-cascade-localredis.yml  docker-compose-cascade-no-celery.yml  docker-compose-cascade.yml  docker-compose-local.yml  docker-compose-tb-load-balanced.yml  docker-compose-tb-local.yml  docker-compose-tb-localredis.yml  docker-compose-tb.yml  docker-compose.yml  locales.sh  pyproject.toml  readthedocs.yml  requirements.txt  setup-apps.py  setup.py  test_tox_timed_compartments.py  tox.ini
atomica/: __init__.py  _version.py  asd.py  calibration.py  cascade.py  data.py  defaults.py  demo.py  demos.py  excel.py  format_databook.ini  format_framework.ini  framework.py  framework_template.xlsx  framework_template_advanced.xlsx  function_parser.py  gui.py  interpolation.py  logging.ini  mcp_server.py  migration.py  model.py  optimization.py  parameters.py  parser.py  parser_config.py  parser_function.py  plotting.py  portfolio.py  programs.py  project.py  project_settings.py  reconciliation.py  results.py  scenarios.py  slist.py  structure.py  structure_settings.py  system.py  system_io.py  (+7 more)
atomica_apps/: __init__.py  apptasks_tb.py  (+10 more)
(+792 files in other folders)
