[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomica"
dynamic = ["version"]
description = "Toolbox for compartment-based dynamic systems with costing and optimization"
readme = "README.md"
authors = [
    { name="Atomica Team", email="info@atomica.tools" },
]
license = { text="MIT" }
keywords = ["dynamic", "compartment", "optimization", "disease"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.7"

dependencies = [
    "matplotlib",
    "numpy>=1.10.1,<2",
    "scipy>=1.6",
    "pandas",
    "xlsxwriter",
    "openpyxl",
    "pyswarm",
    "hyperopt",
    "sciris",
    "tqdm",
]

[project.urls]
Homepage = "https://atomica.tools"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "atomica.version.version"}